--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,3 +9,5 @@
 @using MudBlazor
 @using Boda_BlazorWASM_PowerAutomate
 @using Boda_BlazorWASM_PowerAutomate.Shared
+
+@using Blazor.AnimateOnScroll
