--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<MudLayout>
+<MudLayout Class="overflow-x-hidden">
     <MudAppBar Elevation="0">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudSpacer />
@@ -19,7 +19,7 @@
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
-    <MudMainContent>
+    <MudMainContent Class="overflow-x-hidden">
         @Body
     </MudMainContent>
 </MudLayout>
