--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -15,7 +15,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6">Secciones</MudText>
+            <MudText Class="" Color="Color.Primary" Align="Align.Center" Typo="Typo.subtitle1">Secciones</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
