--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -233,9 +233,19 @@
             </MudContainer>
         </MudItem>
 
+
+        <MudItem xs="12">
+            <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
+                <img src="/images/rama3.svg" alt="Vector Image" class="rama7">
+                <img src="/images/rama3.svg" alt="Vector Image" class="rama7 rama8">
+            </MudContainer>
+        </MudItem>
+
+
         <MudItem Class="mt-2" xs="12">
             <MudText Class="mt-0 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">¡Genial!</MudText>
             <MudText Class="mt-10 dayroman" Color="Color.Primary" Align="Align.Center" Typo="Typo.h4">Danos algunos datos para confirmar tu asistencia</MudText>
+
 
             <MudRadioGroup Class="mt-6" T="string" @bind-SelectedOption="@SelectedOptionAcompañante" Required="true" RequiredError="Por favor di si vienes sola/o o con pareja!">
                 <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option1")">Voy SIN acompañante</MudRadio>
@@ -494,6 +504,25 @@
     .rama6 {
         left: -5%;
         transform: scaleX(1);
+    }
+
+    .rama7 {
+        position: absolute;
+        top: 0; /* Adjust this value to control the distance from the top */
+        right: -20%; 
+        /* You can also use right: 0; for sticking to the right side */
+        width: 250px; /* Adjust the width as needed */
+        height: auto; /* Maintain the aspect ratio */
+        /* You can also use max-width or max-height to set limits *
+                    /* Add other styles for your image if needed */
+        margin-top: -150px;
+        z-index: 2;
+        opacity: 0.7;
+    }
+
+    .rama8 {
+        left: -20%;
+        transform: scaleX(-1);
     }
 
     .bacalisties {
