achieved auto scroll with javascript interop

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@inject IJSRuntime JSRuntime
+
 <link rel="stylesheet" href="./css/custom-fonts.css" />
 
 
@@ -221,6 +223,24 @@
         </div>
     </MudItem>
 
+    <MudItem xs="12">
+        <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
+            <img src="/images/rama4.svg" alt="Vector Image" class="rama5 rama6">
+            <img src="/images/rama4.svg" alt="Vector Image" class="rama5">
+        </MudContainer>
+    </MudItem>
+
+    <MudItem xs="12">
+        <MudContainer Class="flex-column align-center justify-center mud-width-full">
+            <div class="container">
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)">
+                    <div class="vertical-line longline"></div>
+                </AnimateOnScroll>
+            </div>
+        </MudContainer>
+    </MudItem>
+
+
     @if (IsAttendanceConfirmed)
     {
         <MudItem xs="12">
@@ -241,49 +261,52 @@
             </MudContainer>
         </MudItem>
 
-
         <MudItem Class="mt-2" xs="12">
-            <MudText Class="mt-0 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">¡Genial!</MudText>
-            <MudText Class="mt-10 dayroman" Color="Color.Primary" Align="Align.Center" Typo="Typo.h4">Danos algunos datos para confirmar tu asistencia</MudText>
+            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(1)">
+                <MudText Class="mt-0 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">¡Genial!</MudText>
+            </AnimateOnScroll>
 
+            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(1.3)">
+                <MudText Class="mt-10 dayroman" Color="Color.Primary" Align="Align.Center" Typo="Typo.h4">Danos algunos datos para confirmar tu asistencia</MudText>
+            </AnimateOnScroll>
 
-            <MudRadioGroup Class="mt-6" T="string" @bind-SelectedOption="@SelectedOptionAcompañante" Required="true" RequiredError="Por favor di si vienes sola/o o con pareja!">
-                <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option1")">Voy SIN acompañante</MudRadio>
-                <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option2")">Voy CON acompañante</MudRadio>
-            </MudRadioGroup>
+            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(1.6)">
+                <MudRadioGroup Class="mt-6" T="string" @bind-SelectedOption="@SelectedOptionAcompañante" Required="true" RequiredError="Por favor di si vienes sola/o o con pareja!">
+                    <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option1")">Voy SIN acompañante</MudRadio>
+                    <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option2")">Voy CON acompañante</MudRadio>
+                </MudRadioGroup>
+            </AnimateOnScroll>
 
             @if (IsAttendanceConfirmed && SelectedOptionAcompañante == "Option1")
             {
-                <MudText Class="mt-6 hellovalentica" Color="Color.Primary" Align="Align.Center" Typo="Typo.h3">tus datos</MudText>
-                <FormAsistencia></FormAsistencia>
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(1.9)">
+                    <MudText Class="mt-6 hellovalentica" Color="Color.Primary" Align="Align.Center" Typo="Typo.h3">tus datos</MudText>
+                </AnimateOnScroll>
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(2.2)">
+                    <FormAsistencia></FormAsistencia>
+                </AnimateOnScroll>
             }
             else if (IsAttendanceConfirmed && SelectedOptionAcompañante == "Option2")
             {
-                <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">tus datos</MudText>
-                <FormAsistencia></FormAsistencia>
-                <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">datos acompañante</MudText>
-                <FormAsistencia></FormAsistencia>
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(1.9)">
+                    <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">tus datos</MudText>
+                </AnimateOnScroll>
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(2.2)">
+                    <FormAsistencia></FormAsistencia>
+                </AnimateOnScroll>
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(2.5)">
+                    <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">datos acompañante</MudText>
+                </AnimateOnScroll>
+                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)" AnimationDelay="TimeSpan.FromSeconds(2.8)">
+                    <FormAsistencia></FormAsistencia>
+                </AnimateOnScroll>
             }
 
+
         </MudItem>
+ 
     }
 
-    <MudItem xs="12">
-        <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
-            <img src="/images/rama4.svg" alt="Vector Image" class="rama5 rama6">
-            <img src="/images/rama4.svg" alt="Vector Image" class="rama5">
-        </MudContainer>
-    </MudItem>
-
-    <MudItem xs="12">
-        <MudContainer Class="flex-column align-center justify-center mud-width-full">
-            <div class="container">
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)">
-                    <div class="vertical-line longline"></div>
-                </AnimateOnScroll>
-            </div>
-        </MudContainer>
-    </MudItem>
 
 </MudGrid>
 
@@ -582,10 +605,32 @@
     private void ConfirmAttendance()
     {
         IsAttendanceConfirmed = true;
+        StateHasChanged();
+        Task.Delay(500);
+        ScrollByPixels();
+        StateHasChanged();
+
+        ScrollToBottom();
     }
 
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (!firstRender && IsAttendanceConfirmed)
+        {
+            ScrollToBottom();
 
+        }
+    }
 
+    private async Task ScrollToBottom()
+    {
+        await JSRuntime.ScrollToBottom();
+    }
+
+    private async Task ScrollByPixels()
+    {
+        await JSRuntime.ScrollByPixels();
+    }
   
 
 
